--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,56 @@
-$bgColorRed: red;
+@use 'hero';
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+$corFundoPreto: #040714;
+$corTextoSilver: silver;
+$corTextoBranco: #f9f9f9; 
 
 body {
-  background-color: $bgColorRed;
+    background-color: $corFundoPreto;
+}
+
+@mixin title($fontSize: 40px) {
+    @include text($fontSize);
+    color: $corTextoBranco;
+}
+
+@mixin text($fontSize: 16px) {
+    font-size: $fontSize;
+    line-height: $fontSize + 10px;
+    color: $corTextoSilver;
+}
+
+.text--big {
+    @include text(18px);
+}
+
+.text {
+    @include text;
+}
+
+.text--small {
+    @include text(12px);
+}
+
+.title--big {
+    @include title(44px);
+}
+
+.title {
+    @include title;
+}
+
+.title--small {
+    @include title(28px);
+}
+
+.link-text {
+    @include text(18px);
+    text-decoration: underline;
+    color: $corTextoBranco;
 }
