--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,15 +1,17 @@
 @use 'variaveis';
 @use 'hero';
+@use 'shows';
+@use 'plans';
 
 @font-face {
     font-family: Avenir;
-    src: url(../scss/fonts/Avenir-Regular.woff2);
+    src: url(../fonts/Avenir-Regular.woff2);
     font-weight: 400;
 }
 
 @font-face {
     font-family: Avenir;
-    src: url(../scss/fonts/Avenir-Regular.woff2);
+    src: url(../fonts/Avenir-Regular.woff2);
     font-weight: 700;
 }
 
@@ -17,11 +19,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Avenir, sans-serif;
 }
 
 body {
     background-color: variaveis.$corFundoPreto;
-    font-family: Avenir, sans-serif;
 }
 
 @mixin title($fontSize: 40px) {
@@ -33,6 +35,10 @@ body {
     font-size: $fontSize;
     line-height: $fontSize + 10px;
     color: variaveis.$corTextoSilver;
+}
+
+ul {
+    list-style: none;
 }
 
 .text--big {
@@ -63,4 +69,17 @@ body {
     @include text(18px);
     text-decoration: underline;
     color: variaveis.$corTextoBranco;
+}
+
+.button {
+    display: block;
+    width: 100%;
+    height: 60px;
+    font-size: 18px;
+    text-transform: uppercase;
+    border-radius: 4px;
+    margin-top: 2vw;
+    margin-bottom: 8px;
+    color: variaveis.$corTextoBranco;
+    background-color: variaveis.$corFundoAzul;
 }
