ajustes no mobile

--- a/src/scss/_variaveis.scss
+++ b/src/scss/_variaveis.scss
@@ -3,3 +3,9 @@ $corFundoAzul: #6421ff;
 
 $corTextoSilver: silver;
 $corTextoBranco: #f9f9f9; 
+$corTextoPreto: #000;
+
+$corBotaoAzul: #6421ff;
+$corBotaoAzulEscuro: #0063e5;
+$corBotaoPreto: #000;
+$corBotaoBranco: #f9f9f9;
