--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,10 @@
 @use 'hero';
 @use 'shows';
 @use 'plans';
+@use 'available-devices';
+@use 'faq';
+@use 'footer';
+@use 'header';
 
 @font-face {
     font-family: Avenir;
@@ -20,6 +24,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Avenir, sans-serif;
+    list-style: none;
 }
 
 body {
@@ -43,26 +48,50 @@ ul {
 
 .text--big {
     @include text(18px);
+
+    @media (max-width: 768px) {
+        @include text(15px);
+    }
 }
 
 .text {
     @include text;
+
+    @media (max-width: 768px) {
+        @include text(14px);
+    }
 }
 
 .text--small {
     @include text(12px);
+
+    @media (max-width: 768px) {
+        @include text(11px);
+    }
 }
 
 .title--big {
     @include title(44px);
+
+    @media (max-width: 768px) {
+        @include title(26px);
+    }
 }
 
 .title {
     @include title;
+
+    @media (max-width: 768px) {
+        @include title(24px);
+    }
 }
 
 .title--small {
     @include title(28px);
+    
+    @media (max-width: 768px) {
+        @include title(22px);
+    }
 }
 
 .link-text {
@@ -72,14 +101,93 @@ ul {
 }
 
 .button {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 60px;
     font-size: 18px;
     text-transform: uppercase;
     border-radius: 4px;
-    margin-top: 2vw;
-    margin-bottom: 8px;
     color: variaveis.$corTextoBranco;
-    background-color: variaveis.$corFundoAzul;
+    background-color: variaveis.$corBotaoAzul;
+    text-decoration: none;
+    padding: 8px 14px;
+    letter-spacing: 1px;
+    border: 1px solid variaveis.$corBotaoAzul;
+
+    &:hover {
+        background-color: lighten(variaveis.$corBotaoAzulEscuro, 3%);
+        cursor: pointer;
+    }
+
+    &--secondary {
+        background-color: variaveis.$corBotaoAzulEscuro;
+        border-color: variaveis.$corBotaoAzulEscuro;
+
+        &:hover {
+            background-color: lighten(variaveis.$corBotaoAzulEscuro, 3%)
+        }
+    }
+
+    &--dark {
+        background-color: rgba(variaveis.$corBotaoPreto, 0.8);
+        border-color: variaveis.$corBotaoBranco;
+
+        &:hover {
+            background-color: variaveis.$corBotaoBranco;
+            color: variaveis.$corFundoPreto;
+        }
+    }
+}
+
+.image-text-section {
+    padding: 5.6vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+
+    @media (max-width: 768px) {
+        display: block;
+    }
+
+    img {
+        width: 100%;
+    }
+
+    &__text_container {
+        padding: 0 2vw;
+
+        h2 {
+            margin-bottom: 24px;
+        }
+    }
+
+    &--image-full-width {
+        display: block;
+        position: relative;
+
+        img {
+            width: 100%;
+        }
+
+        &__text_container {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            width: calc(50% - 5.6vw);
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            @media (max-width: 768px) {
+                position: relative;
+                left: 0;
+                width: 100%;
+            }
+        }
+
+    }
+
 }
