--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,13 +9,13 @@
 
 @font-face {
     font-family: Avenir;
-    src: url(../fonts/Avenir-Regular.woff2);
+    src: url(fonts/Avenir-Bold.woff2);
     font-weight: 400;
 }
 
 @font-face {
     font-family: Avenir;
-    src: url(../fonts/Avenir-Regular.woff2);
+    src: url(fonts/Avenir-Regular.woff2);
     font-weight: 700;
 }
 
